--- a/HomePage/PageDesign_AboutMe.css
+++ b/HomePage/PageDesign_AboutMe.css
@@ -17,6 +17,7 @@ html, body {margin:0; padding:0;}
 	margin: 0;
 }
 
+
 /* Text Elements */
 .heading {
 	color: #500000; 
@@ -33,6 +34,13 @@ html, body {margin:0; padding:0;}
 	display: inline-block; 
 	padding: 30px;
 	text-indent: 2em;
+}
+
+.profilePicture {
+	vertical-align: top; 
+	display: inline-block; 
+	width: 250px;
+	height: 250px;
 }
 
 
