--- a/HomePage/PageDesign_AboutMe.css
+++ b/HomePage/PageDesign_AboutMe.css
@@ -7,6 +7,7 @@ html, body {margin:0; padding:0;}
 	position: relative;
 	width: 100%;
 	font-family: helvetica;
+	color: black;
 }
 
 .darkBox {
@@ -17,14 +18,25 @@ html, body {margin:0; padding:0;}
 	margin: 0;
 }
 
+.project {
+	padding-top: 30px;
+	text-align: center;
+}
+
 
 /* Text Elements */
 .heading {
 	color: #500000; 
 	text-align: center; 
-	font-size: 150%;
+	font-size: 1.75em;
 	padding-top: 20px;
 	margin: 0;
+}
+
+.paragraphs {
+	text-indent: 2em;
+	margin: 0 auto;
+	display:inline-block;
 }
 
 .profilePicture {
@@ -34,6 +46,22 @@ html, body {margin:0; padding:0;}
 	height: 225px;
 }
 
+.projectTitle {
+	display: inline-block;
+	text-align: left;
+	vertical-align: top;
+}
+
+.projectDescription {
+	display: inline-block;
+	text-align: left;
+	
+}
+
+.links {
+	text-decoration: none;
+	color: #500000;
+}
 
 
 
