Finished Projects & Reorganized File System
Finished Stutter Speak entry and added portfolio website entry to website. Also reorganized file system. Note: look into query based actions.

--- a/HomePage/PageDesign_AboutMe.css
+++ b/HomePage/PageDesign_AboutMe.css
@@ -6,7 +6,7 @@ html, body {margin:0; padding:0;}
 	background-color: #FFFFFF;
 	position: relative;
 	width: 100%;
-	font-family: helvetica;
+	font-family: Georgia;
 	color: black;
 }
 
@@ -19,7 +19,7 @@ html, body {margin:0; padding:0;}
 }
 
 .project {
-	padding-top: 30px;
+	padding-top: 40px;
 	text-align: center;
 }
 
@@ -34,8 +34,7 @@ html, body {margin:0; padding:0;}
 }
 
 .paragraphs {
-	text-indent: 1em;
-	margin: 0 auto;
+	margin: 0;
 	display:inline-block;
 }
 
@@ -50,12 +49,14 @@ html, body {margin:0; padding:0;}
 	display: inline-block;
 	text-align: left;
 	vertical-align: top;
-	width: 250px;
+	width: 205px;
 }
 
 .projectDescription {
 	display: inline-block;
 	text-align: left;
+	width: 525px;
+	padding-left: 40px;
 }
 
 .links {
