--- a/HomePage/PageDesign_AboutMe.css
+++ b/HomePage/PageDesign_AboutMe.css
@@ -55,7 +55,7 @@ html, body {margin:0; padding:0;}
 .projectDescription {
 	display: inline-block;
 	text-align: left;
-	width: 525px;
+	max-width: 500px;
 	padding-left: 40px;
 }
 
