Mobile Sizing Fix & Aggie Web Devs Addition
Adjusted queries to fix spacing on mobile browsers and added Aggie Web Developers club entry to "Extracurricular" section.

--- a/queries.css
+++ b/queries.css
@@ -42,6 +42,17 @@
 	}
 }
 
+@media screen and (max-width: 580px) {
+	.projectDescription {
+		max-width: 350px;
+	}
+	
+	.coursework ul {
+		padding-left: 2px;
+	}
+	
+}
+
 @media screen and (max-width: 343px) {
 	.footerLinks {
 		position: relative;
