--- a/styles.css
+++ b/styles.css
@@ -53,10 +53,13 @@ html, body {
 
 		.arrow {
 			position: absolute; 
-			left: 50%; 
-			top: 80%; 
+			left: 50%;			
+			top: 82.5%; 
 			transform: translateX(-50%); 
 			font-size: 10em;
+			animation: bouncing infinite 1s alternate;
+			transition: .5s ease;
+			height: 150px;
 		}
 
 		.arrow a {
@@ -215,6 +218,12 @@ html, body {
 			right: 25px;
 		}
 
+
+/* Animation */
+	@keyframes bouncing {
+		from { transform: translate(-50%, 20px);}
+		to { transform: translate(-50%, -10px);}
+	}
 
 
 
