Updated Resume & Adjusted Paragraph Alignment

--- a/styles.css
+++ b/styles.css
@@ -106,7 +106,8 @@ html, body {
 
 		.paragraphs {
 			margin: 0;
-			display:inline-block;
+			display: inline-block;
+			text-align: justify;
 		}
 
 		.profilePicture {
