--- a/styles.css
+++ b/styles.css
@@ -73,7 +73,8 @@ html, body {
 		}
 
 		.headerBackground{
-			background: url("images/Zachry Engineering Education Complex.jpg");
+			background: url("images/okc_skyline.jpg");
+            filter: blur(2px);
 			top: 0; 
 			left: 0; 
 			background-size: cover; 
@@ -92,12 +93,12 @@ html, body {
 			border-radius: 7.5%;
 		}
 		.headerResume:hover {
-			color: #500000;
+			color: #2f8bc8;
 		}
 
 	/* Site Body */
 		.heading {
-			color: #500000; 
+			color: #2f8bc8; 
 			text-align: center; 
 			font-size: 1.75em;
 			padding-top: 20px;
@@ -122,12 +123,12 @@ html, body {
 			vertical-align:top; 
 			padding:10px; 
 			margin-top:5px; 
-			margin-bottom:25px;"
+			margin-bottom:25px;
 		}
 		
 		.coursework ul {
 			list-style-type:none; 
-			text-align:left;"
+			text-align:left;
 		}
 		
 		.projectTitle {
@@ -151,7 +152,7 @@ html, body {
 
 		.links {
 			text-decoration: none;
-			color: #500000;
+			color: #2f8bc8;
 		}
 
 		.dot {
@@ -162,7 +163,7 @@ html, body {
 			float: right;
 			margin-left: 5px;
 			vertical-align: middle;
-			background-color: #500000;
+			background-color: #2f8bc8;
 			border-radius: 25%;
 			display: inline-block;
 		}
@@ -194,7 +195,7 @@ html, body {
 		}
 
 		.footerMenu ul li a:hover {
-			color: #500000;
+			color: #2f8bc8;
 			font-weight: bold;
 		}
 	
